[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/GutenbergBookDisplay.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/page_flip_6.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/fonts/georgia.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sounds/page_flip_5.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/book_open_1.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/page_flip_2.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/book_open_2.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/book_open_3.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/page_flip_4.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/book_open_4.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/page_flip_3.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/page_flip_1.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/page_flip_7.ogg" type="AudioStream" id=13]
[ext_resource path="res://scripts/RandomSoundPool.gd" type="Script" id=14]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[node name="GutenbergBookDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 50.0
margin_right = -40.0
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
margin_right = 944.0
margin_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer"]
margin_right = 944.0
margin_bottom = 510.0
size_flags_horizontal = 7
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.290196, 0.270588, 0.270588, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. "
autowrap = true
max_lines_visible = 500
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageCount" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = -34.6123
margin_bottom = -5.6123
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.290196, 0.270588, 0.270588, 0.392157 )
text = "Page 12/23"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BookOpenSound" type="AudioStreamPlayer" parent="."]
script = ExtResource( 14 )
sounds = [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ) ]

[node name="PageTurnSound" type="AudioStreamPlayer" parent="."]
script = ExtResource( 14 )
sounds = [ ExtResource( 12 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 13 ) ]
